# u-dales

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .zenodo.json  404.html  AGENTS.md  BCcleanup_backlog.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOP.md  Doxyfile  Doxyfile.cmake  INSTALL  INSTALL.md  ISSUE308_HANDOFF.md  LIBS.md  Makefile  Makefile.orig  PYTHON_PORTING_PLAN.md  README.md  README_CMAKE.md  README_DOCS.md  README_old.md  advec_2nd.f90  advec_5th.f90  advec_6th.f90  advec_kappa.f90  advec_upw.f90  advection.f90  agents.md  cycred.f  defs.f90  depend  downloadFindFFTW.cmake.in  environment.yml  fft.f  fftnew.f90  force_user.f90  (+73 more)
.github/: CODEOWNERS
CONTRIBUTING/: index.html
DEVELOP/: index.html
addon/: micro_user.f90  modbudget.f90  modbulkmicro.f90  modbulkmicrodata.f90  modbulkmicrostat.f90  modchecksim.f90  modcloudfield.f90  modfielddump.f90  modgenstat.f90  modmicrophysics.f90  modnetcdfmovie.f90  modnetcdfstats.f90  modparticles.f90  modradstat.f90  modstattend.f90  modtilt.f90  modtimestat.f90  surf_user_rico.f90
cluster_workflows/: index.html
cmake/: FindDECOMP2D.cmake  FindNetCDF.cmake
dales-urban/: Makefile  depend  modboundary.f90  modinlet.f90  modpurifiers.f90  modsave.f90  program.f90  wf_gr.f90
decomp2d/: CMakeLists.txt
docs/: JSON_CONFIG_GUIDE.md  cluster_workflows.md  geometry_tutorial.tex.md  github_math_test.md  index.md  references.bib  udales-2decomp.md  udales-agents.md  udales-architecture.md  udales-boundary-conditions.md  udales-copy-inputs.md  udales-development.md  udales-docs-scientific.md  udales-docs-software.md  udales-driver-simulations.md  udales-example-simulations.md  udales-extending.md  udales-facets-tutorial.md  udales-fields-tutorial.md  udales-geometry-tutorial.md  udales-geometry-tutorial.tex.md  udales-getting-started.md  udales-how-to-cite.md  udales-hpc-notes.md  udales-installation.md  udales-model-overview.md  udales-namoptions-overview.md  udales-output-files.md  udales-post-processing.md  udales-postproc-tutorial.md  udales-pre-processing.md  udales-preprocessing-windows.md  udales-pub-list.md  udales-python-package.md  udales-simulation-setup.md  (+8 more)
tools/preprocessing/: CMakeLists.txt
tools/python/: .gitignore  CODE_REVIEW_2026-07.md  ENVIRONMENT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  POSTPROCESSING_REVIEW.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.py  README.md  README_VENV.md  convert_trees_to_sparse.py  exceptions.py  geometry_generation.py  geometry_generation_example.py  namelists.json  pyproject.toml  requirements-build.txt  requirements-plotly.txt  requirements-pyvista.txt  requirements.txt  setup_venv.ps1  setup_venv.sh  test_phase1.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_udbase_comprehensive.py  udbase.py  udconfig.py  udfacet.py  udgeom.py  udgrid.py  udnetcdf.py  (+2 more)
tools/python/examples/: .gitignore  adjacent_buildings.stl  advanced_analysis_example.py  building_above_ground.stl  building_below_ground.stl  facets_example.py  fields_example.py  fields_tutorial.ipynb  geometry_example.py  geometry_fix_generate.py  geometry_tutorial.ipynb  uDALES.stl  udbase_tutorial.ipynb  udprep_radiation_tutorial.py  udprep_tutorial.py  udprep_veg_tutorial.py  udprep_vegetation_tutorial.py  visualization_example.py
tools/python/examples/harmonie_to_udales_radiation/: harmonie_ssrd_to_timedepsw.py  harmonie_strd_to_timedeplw.py  harmonie_to_udales_radiation_workflow.ipynb  nwp_to_udales_radiation_email_draft.md
tools/python/fortran/: README.md  build_f2py.ps1  build_f2py.sh  directShortwave.f90  directShortwave_f2py.f90  directshortwave_f2py.pyf  directshortwave_f2py_wrapper.f90  ibm_preproc_f2py.f90  ibm_preproc_f2py.pyf
tools/python/fortran/ibm_preproc/: IBM_preproc_driver.f90  IBM_preproc_main.f90  IBM_preproc_module.f90  boundaryMasking.f90  in_mypoly_functions.f90  matchFacetsCells.f90
tools/python/tests/: _common.py  init_udprep.py  test_cross_platform.py  test_directshortwave.py  test_directshortwave_f2py_integration.py  test_directshortwave_periodic.py  test_harmonie_radiation.py  test_meshgraph.py  test_namelist.py  test_radiation_compute.py  test_scanline_contract.py  test_solar.py  test_udbase_core.py  test_udbase_loaders.py  test_udbase_vis.py  test_udgeom_against_matlab.py  test_udgeom_api.py  test_udgeom_outline_loops.py  test_udprep_core.py  test_udprep_grid.py  test_udprep_init.py  test_udprep_pipeline.py  test_udprep_profiles.py  test_udprep_profiles_and_scalars.py  test_udprep_scalars.py  test_udprep_seb.py  test_udprep_vegetation.py  test_udstats.py  test_view3d.py  test_view3d_utils.py
tools/python/tests/data/udgeom_matlab/: README.md  flat_ground.json  flat_ground.stl  harvest_udgeom_reference.m  manifest.json  single_box.json  single_box.stl  two_boxes_with_ground.json  two_boxes_with_ground.stl  xie_castro_2008.json  xie_castro_2008.stl
tools/python/tests/vegetation/: directshortwave.md  raycasting.py  test_directshortwave.py  test_directshortwave_periodic.py  trace_ray_segments.py  veg.py
tools/python/udgeom/: __init__.py  _meshgraph.py  _meshutil.py  calculate_outline.py  check_mesh.py  delete_ground.py  extrude_to_ground.py  fix_mesh.py  geometry_generation.py  geometry_generation_backup_pre_triangle.py  split_buildings.py  truncate_below_ground.py  udgeom.py  view3d.py
tools/python/udprep/: __init__.py  _directshortwave.py  _radiation_compute.py  _section.py  defaults.json  directshortwave.py  directshortwave_f2py.cp312-win_amd64.pyd  directshortwave_facsec.py  directshortwave_moller.py  directshortwave_numba.py  directshortwave_nur1.py  directshortwave_py.py  harmonie_radiation.py  namelist.py  solar.py  udprep.py  udprep_bcs.py  udprep_common.py  udprep_forcing.py  udprep_grid.py  udprep_ibm.py  udprep_ic.py  udprep_init.py  udprep_radiation.py  udprep_readnamelist.py  udprep_scalars.py  udprep_seb.py  udprep_vegetation.py  vegetation.py
tools/python/udvis/: __init__.py  scene.py  udbase_vis.py
(+1984 files in other folders)
